# reference-design-template

./: .checkpatch.conf  .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README.rst  VERSION  credentials.conf_example  pm_static.yml  prj.conf  sample.yaml  west.yml
.github/workflows/: build_ncs.yml  build_zephyr.yml  release.yml  test.yml  test_ncs.yml
boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay  aludel_elixir_ns.conf  aludel_elixir_ns.overlay  aludel_elixir_v1_ns.conf  aludel_elixir_v1_ns.overlay  aludel_mini_nrf9160_ns.conf  aludel_mini_nrf9160_ns.overlay  aludel_mini_v1_sparkfun9160_ns.conf  aludel_mini_v1_sparkfun9160_ns.overlay  mimxrt1024_evk.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf_dk_common.dtsi  sparkfun_thing_plus_nrf9160_ns.conf
dts/bindings/: rfid,click.yaml
patches/zephyr/: 0001-net-coap-add-TOO_MANY_REQUESTS-to-return-codes.patch
pipelines/: cbor-to-lightdb.yml
socs/: nrf9160_ns.conf
src/: app_buzzer.c  app_buzzer.h  app_dfu.h  app_rfid.c  app_rfid.h  app_rpc.c  app_rpc.h  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_state.c  app_state.h  app_work.c  app_work.h  battery.c  battery.h  json_helper.h  main.c  main.h  network_location.c  network_location.h  rfid_click.c  rfid_click.h  supercon_badge.c  supercon_badge.h  wifi_positioning.c  wifi_positioning.h
src/battery_monitor/: CMakeLists.txt  Kconfig  bat_max17262.c  (+3 more)
zephyr/: module.yml
(+51 files in other folders)
